--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Generate Datas
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "* */1 * * *"
   workflow_dispatch:
   
 
@@ -16,7 +16,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: ${{ github.gabrielhcamacho }}
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_out_path: dist/github-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
